--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,1 +1,32 @@
-<h1>Bienvenido a home</h1>
+<div class="pb-3">
+    <header class="header__title d-flex justify-content-center align-items-center flex-column pt-3">
+        <h1 class="header__h1 p-1">HOME</h1>
+        <div class="pb-2">
+            <a href="" ><button class="header__btn">Ingreso</button></a>
+            <a href="/productos" ><button class="header__btn">Productos</button></a>
+            <a href="" ><button class="header__btn">Ayuda</button></a>
+        </div>
+    </header>
+    <main class="pt-3">
+        <p class="color__white container">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, omnis vel ea officiis itaque commodi porro
+            laboriosam? Distinctio harum, qui eaque consequatur, tempore blanditiis modi voluptatem soluta, veniam ex
+            quidem facere repellendus? Corrupti dicta, sit, esse, animi vel tenetur eius provident aliquid voluptatum
+            dolorum reiciendis perspiciatis qui veritatis accusamus quae quia id hic voluptate repellat suscipit magni
+            maxime nisi fuga! Consectetur quae reprehenderit numquam molestiae dignissimos. Illum voluptatibus minima
+            voluptate laborum veritatis itaque, non voluptatem maiores exercitationem, distinctio dolorem dolorum.
+            Asperiores eos odit nisi eum blanditiis beatae quos quasi sequi odio dolorum, deserunt commodi autem
+            aliquam. Voluptatem, totam dolorum? Deserunt!
+        </p>
+        <div class="d-flex justify-content-center align-items-center pb-4">
+            <img src="https://i.pinimg.com/564x/dd/04/84/dd0484d00b5c3874732c9b2d1ce76eac.jpg" alt=""
+                class="img__verduras">
+        </div>
+    </main>
+    <footer class="d-flex justify-content-center align-items-center flex-column pt-3 footer pb-3">
+        <div class="color__white">contacto : 12385124</div>
+        <div class="color__white">email : ashdhj@mail.com</div>
+        <div class="color__white">Te esperamos!</div>
+    </footer>
+
+</div>
