--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -2,9 +2,9 @@
     <header class="header__title d-flex justify-content-center align-items-center flex-column pt-3">
         <h1 class="header__h1 p-1">Chat</h1>
         <div class="pb-2">
-            <a href=""><button class="header__btn">Ingreso</button></a>
-            <a href="/productos"><button class="header__btn">Productos</button></a>
-            <a href=""><button class="header__btn">Ayuda</button></a>
+            <a href="/home"><button class="header__btn">Home</button></a>
+            <a href="/products"><button class="header__btn">Productos</button></a>
+            <a href=""><button class="header__btn">Chat</button></a>
         </div>
     </header>
     <main class="pt-3">
