--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -2,10 +2,11 @@
     <header class="header__title d-flex justify-content-center align-items-center flex-column pt-3">
         <h1 class="header__h1 p-1">HOME</h1>
         <div class="pb-2">
-            <a href="" ><button class="header__btn">Home</button></a>
-            <a href="/products" ><button class="header__btn">Productos</button></a>
-            <a href="/chat" ><button class="header__btn">Chat</button></a>
+            <a href=""><button class="header__btn">Home</button></a>
+            <a href="/products"><button class="header__btn">Productos</button></a>
+            <a href="/chat"><button class="header__btn">Chat</button></a>
         </div>
+            <a href="/login"><button class="header__btn">Login</button></a>
     </header>
     <main class="pt-3">
         <p class="color__white container">
