--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -7,6 +7,8 @@
             <a href="/chat"><button class="header__btn">Chat</button></a>
 
         </div>
+        <a href="/login"><button class="header__btn">Login</button></a>
+
     </header>
     <main>
         <h1 class="d-flex justify-content-center align-items-center flex-column pt-3 header__h1"> Productos </h1>
