Login y register con ruta de admin y session

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -12,7 +12,7 @@
     <main class="d-flex justify-content-center align-items-center pb-4">
         <form action="/auth/login" method="post">
             <div class="pt-2">
-                <input type="email" name="username" id="username" placeholder="ingrese su email" autofocus required>
+                <input type="email" name="email" id="email" placeholder="ingrese su email" autofocus required>
             </div>
             <div class="pt-2">
                 <input type="password" name="password" id="password" placeholder="ingrese su contraseña" required>
@@ -21,7 +21,7 @@
                 <button type="submit" class="btn btn-primary"> Ingresar </button>
             </div>
             <div class="pt-2">
-                <a href="/register"><button type="button"  class="btn btn-primary"> Registrarme</button></a>
+                <a href="/view/register"><button type="button"  class="btn btn-primary"> Registrarme</button></a>
             </div>
         </form>
     </main>
