--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -7,7 +7,7 @@
             <a href="/chat"><button class="header__btn">Chat</button></a>
 
         </div>
-        <a href="/login"><button class="header__btn">Login</button></a>
+        <a href="/view/login"><button class="header__btn">Login</button></a>
 
     </header>
     <main>
