--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -6,7 +6,7 @@
             <a href="/products"><button class="header__btn">Productos</button></a>
             <a href=""><button class="header__btn">Chat</button></a>
         </div>
-        <a href="/login"><button class="header__btn">Login</button></a>
+        <a href="/view/login"><button class="header__btn">Login</button></a>
 
     </header>
 <main class="pt-3">
