--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -25,7 +25,7 @@
                     <button type="submit" class="btn btn-primary ">Registrarme</button>
                 </div>
             <div class=" pt-3">
-                <a href="/login"><button type="button" class="btn btn-primary">Volver a Login</button></a>
+                <a href="/view/login"><button type="button" class="btn btn-primary">Volver a Login</button></a>
             </div>
             </form>
         </div>
