--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container bg-white">
     <h1>Hola {{name}}!</h1>
     <h4><a href="/auth/logout">Logout.</a></h4>
 </div>
