--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,32 +1,38 @@
 <div class="container d-flex align-items-center flex-column">
-    <header>
-        <h1>Register</h1>
-    </header>
+    <div class="pt-4 pb-4">
+        <header class="header__register p-2">
+            <h1>Register</h1>
+        </header>
+    </div>
     <main>
         <div class="container">
-            <form action="/auth/register" method="post">
-                <div class="form-group">
-                    <label for="firstName">Nombre</label>
-                    <input type="text" class="form-control" name="firstName" id="firstName" required>
+            <form action="/auth/register" method="post" class="loginAndRegister p-3">
+                <div class=" p-2  d-flex align-items-center flex-column">
+                    <h5>Ingrese sus datos</h5>
                 </div>
-                <div class="form-group">
-                    <label for="lastName">Apellido</label>
-                    <input type="text" class="form-control" name="lastName" id="lastName" required>
+                <div class="form-group pb-4 ">
+                    <input type="text" class="form-control input_loginRegister" name="firstName" id="firstName" required
+                        placeholder="Nombre">
                 </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" class="form-control" name="email" id="email" required>
+                <div class="form-group pb-4">
+                    <input type="text" class="form-control input_loginRegister" name="lastName" id="lastName" required
+                        placeholder="Apellido">
                 </div>
-                <div class="form-group">
-                    <label for="password">Contraseña</label>
-                    <input type="password" class="form-control" name="password" id="password" required>
+                <div class="form-group pb-4">
+                    <input type="email" class="form-control input_loginRegister" name="email" id="email" required
+                        placeholder="Email">
                 </div>
-                <div class=" pt-3">
-                    <button type="submit" class="btn btn-primary ">Registrarme</button>
+                <div class="form-group pb-4">
+                    <input type="password" class="form-control input_loginRegister" name="password" id="password"
+                        required placeholder="Contraseña">
                 </div>
-            <div class=" pt-3">
-                <a href="/view/login"><button type="button" class="btn btn-primary">Volver a Login</button></a>
-            </div>
+                <div class=" pt-3  d-flex align-items-center flex-column">
+                    <button type="submit" class="btn botoneras btn-dark">Registrarme</button>
+                </div>
+                <div class=" pt-3  d-flex align-items-center flex-column">
+                    <a href="/view/login"><button type="button" class="btn botoneras btn-dark">Volver a
+                            Login</button></a>
+                </div>
             </form>
         </div>
     </main>
